# pyemul

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
Tests/: my_first_computer.py
Tests/files/: dividenumber.asm  dividenumber.out
docs/: my_first_computer.py
docs/files/: dividenumber.asm
pyemul/: cpu.py  mmu.py
src/pyemul/: __init__.py  cpu.py  mmu.py
tests/: test_cpu.py  test_mmu.py
