[metadata]
name = pyemul
version = attr: pyemul.__version__
description = A simple Python based emulator for the 6502 processor
author = Sam Hill
author_email = sam.j.hill@protonmail.com
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = emulator, cpu, 6502

[options]
packages =
    pyemul
install_requires =

python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.1
    pytest-cov>=2.12
    tox>=3.24
    flake8>=5.0

[flake8]
max-line-length = 160
